k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: healthflow-frontend
  labels:
    app: healthflow-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: healthflow-frontend
  template:
    metadata:
      labels:
        app: healthflow-frontend
    spec:
      containers:
        - name: frontend
          image: asia-south1-docker.pkg.dev/project-de920623-03c7-48d1-864/healthflow-repo/frontend:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: healthflow-frontend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
